--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-Occitan
-
-                            apertium-oci
+Occitan (`apertium-oci`)
 ===============================================================================
 
 This is an Apertium monolingual language package for Occitan. What
@@ -8,6 +6,9 @@ you can use this language package for:
 
 * Morphological analysis of Occitan
 * Morphological generation of Occitan
+** Generation of Aranese
+** Generation of Gascon
+** Generation of Lenguadocian
 * Part-of-speech tagging of Occitan
 
 Requirements
@@ -25,11 +26,11 @@ Compiling
 ===============================================================================
 
 Given the requirements being installed, you should be able to just run:
-
+```
 $ ./configure
 $ make
-
-You can use ./autogen.sh instead of ./configure if you're compiling
+```
+You can use `./autogen.sh` instead of `./configure` if you're compiling
 from SVN.
 
 If you're doing development, you don't have to install the data, you
@@ -37,10 +38,10 @@ can use it directly from this directory.
 
 If you are installing this language package as a prerequisite for an
 Apertium translation pair, then do (typically as root / with sudo):
-
+```
 # make install
-
-You can give a --prefix to ./configure to install as a non-root user,
+```
+You can give a `--prefix` to `./configure` to install as a non-root user,
 but make sure to use the same prefix when installing the translation
 pair and any other language packages.
 
@@ -49,21 +50,23 @@ Testing
 
 If you are in the source directory after running make, the following
 commands should work:
-
+```
 $  echo "TODO: test sentence" | apertium -d . oci-morph
 TODO: test analysis result
-
+```
+```
 $ echo "TODO: test sentence" | apertium -d . oci-tagger
 TODO: test tagger result
+```
 
 Files and data
 ===============================================================================
 
-* apertium-oci.oci.dix            - Monolingual dictionary
-* oci.prob                        - Tagger model
-* apertium-oci.oci.rlx            - Constraint Grammar disambiguation rules
-* apertium-oci.post-oci.dix       - Post-generator
-* modes.xml                       - Translation modes
+* `apertium-oci.oci.dix`            - Monolingual dictionary
+* `oci.prob`                        - Tagger model
+* `apertium-oci.oci.rlx`            - Constraint Grammar disambiguation rules
+* `apertium-oci.post-oci.dix`       - Post-generator
+* `modes.xml`                       - Translation modes
 
 For more information
 ===============================================================================
@@ -78,7 +81,7 @@ Help and support
 If you need help using this language pair or data, you can contact:
 
 * Mailing list: apertium-stuff@lists.sourceforge.net
-* IRC: #apertium on irc.freenode.net
+* IRC: `#apertium` on `irc.freenode.net`
 
 See also the file AUTHORS included in this distribution.
 
