--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,5 @@
+2018-2019, Hèctor Alòs i Font <hectoralos@gmail.com>
 2018, Claudi Balaguer <ratapenada@yahoo.com>
-2018, Hèctor Alòs i Font <hectoralos@gmail.com>
+2016-2018, Francis M. Tyers <ftyers@prompsit.com>
+2016, Aurelie Seguier <unuaiga@users.sourceforge.net>
+2016, Sjur Nørstebø Moshagen <sjur.n.moshagen@uit.no>
